force-app/main/default/objects/Mapping_Reference__c/Mapping_Reference__c.object-meta.xml
<CustomObject>
    <label>Mapping Reference</label>
    <nameField>
        <label>Mapping Reference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapping References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>