force-app/main/default/objects/Mapping_Reference__c/fields/Defined_Object__c.field-meta.xml
<CustomField>
    <fullName>Defined_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defined Object</label>
    <referenceTo>Mapping_Object__c</referenceTo>
    <relationshipLabel>Mapping References (Defined Object)</relationshipLabel>
    <relationshipName>Mapping_References1</relationshipName>
    <type>Lookup</type>
</CustomField>