force-app/main/default/objects/Mapping_Reference__c/fields/Id_ExtId_Value__c.field-meta.xml
<CustomField>
    <fullName>Id_ExtId_Value__c</fullName>
    <label>Id / ExtId Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>