force-app/main/default/objects/Mapping_Reference__c/fields/Mapping_Object__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mapping Object</label>
    <referenceTo>Mapping_Object__c</referenceTo>
    <relationshipLabel>Mapping References</relationshipLabel>
    <relationshipName>Mapping_References</relationshipName>
    <type>Lookup</type>
</CustomField>