force-app/main/default/objects/Mapping_Reference__c/fields/Reference_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Reference_Field_API_Name__c</fullName>
    <label>Reference Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>