force-app/main/default/objects/Mapping_Reference__c/fields/Reference_Type__c.field-meta.xml
<CustomField>
    <fullName>Reference_Type__c</fullName>
    <label>Reference Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SObject Definition</fullName>
            </value>
            <value>
                <fullName>External Id Value</fullName>
            </value>
            <value>
                <fullName>Id Value</fullName>
            </value>
            <value>
                <fullName>Join Object</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>