force-app/main/default/objects/Mapping_Reference__c/fields/Referenced_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Referenced_Object_API_Name__c</fullName>
    <label>Referenced Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>