force-app/main/default/objects/Mapping_Reference__c/fields/Upsert_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Upsert_Field_API_Name__c</fullName>
    <label>Upsert Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>